--- a/data/pom.xml
+++ b/data/pom.xml
@@ -11,8 +11,9 @@
     <groupId>com.teamplanner</groupId>
     <artifactId>data</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>data</name>
-    <description>data</description>
+
+    <name>teamplanner-data</name>
+
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -28,14 +29,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
