--- a/logic/pom.xml
+++ b/logic/pom.xml
@@ -8,11 +8,13 @@
         <version>2.7.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.teamplanner</groupId>
     <artifactId>logic</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>logic</name>
-    <description>logic</description>
+
+    <name>teamplanner-logic</name>
+
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -28,14 +30,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
