--- a/web/pom.xml
+++ b/web/pom.xml
@@ -34,6 +34,11 @@
             <version>31.1-jre</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.immutables</groupId>
             <artifactId>value</artifactId>
             <version>2.9.1</version>
