--- a/web/.gitignore
+++ b/web/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+web/src/main/java/com/teamplanner/web/meetingevent.json
 
 ### STS ###
 .apt_generated
